created comunity page and added to routes

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -92,6 +92,7 @@
         <a href="/edit-meal">EDIT MEAL</a>
         <a href="/day">DAY</a>
         <a href="/edit-profile">EDIT PROFILE</a>
+        <a href="/comunity">COMUNITY</a>
         <div>
 
         </div>
