working on add recipes page js

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -93,7 +93,7 @@
         <a href="/day">DAY</a>
         <a href="/edit-profile">EDIT PROFILE</a>
         <a href="/comunity">COMUNITY</a>
-        <a href="/create-recipe">CREATE RECIPE</a>
+        <a href="/add-recipe">ADD RECIPE</a>
         <div>
 
         </div>
