--- a/src/views/add_recipe.ejs
+++ b/src/views/add_recipe.ejs
@@ -25,7 +25,7 @@
 
 
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <title>Editar Receita</title>
+    <title>Adicionar Receita</title>
 </head>
 
 <body>
@@ -33,7 +33,8 @@
         <nav class="header navbar navbar-expand-lg">
             <div class="container-fluid padding-zero">
                 <div class="menu">
-                    <a class="padding-zero margin-zero" href="/home"><img src="img/logo-white-green.png" class="logo-icon"></a>
+                    <a class="padding-zero margin-zero" href="/home"><img src="img/logo-white-green.png"
+                            class="logo-icon"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false"
                         aria-label="Toggle navigation">
@@ -44,8 +45,7 @@
                     <div class="collapse navbar-collapse center" id="navbarContent" style="">
                         <ul class="flex-row gap-20 padding-zero margin-zero">
                             <li class="center">
-                                <a class="font chocolate-brown superbold no-decoration"
-                                    href="/"><span>Sair</span></a>
+                                <a class="font chocolate-brown superbold no-decoration" href="/"><span>Sair</span></a>
                             </li>
                             <li class="center">
                                 <img src="img/icon-dark-mode-black.png">
@@ -61,8 +61,9 @@
             <div class="view-recipes-top flex-row">
                 <div class="view-recipes-header flex-column gap-30">
                     <div class="flex-column">
-                        <img class="recipes-img" src="img/pizza.jpg">
+                        <img class="recipes-img" id="imgFoto" src="img/add-photo-image.jpg">
                     </div>
+                    <input type="file" id="flImage" name="foto" id="foto" accept="image/*" placeholder="Teste" hidden>
                 </div>
                 <div class="view-recipes-content flex-column gap-20">
                     <div class="recipe-title-and-favorite flex-row">
@@ -77,11 +78,28 @@
                     </div>
                     <div class="recipe-types flex-row">
                         <div class="recipe-type-box">
-                            
+
                         </div>
                         <div class="recipe-type-add">
                             <img class="icon" src="img/icon-delete.png">
-                            <img class="icon" src="img/plus-icon.png">
+                            <img class="icon" data-bs-toggle="modal" data-bs-target="#types_meals"
+                                src="img/plus-icon.png">
+                        </div>
+                        <div class="modal fade" id="types_meals" tabindex="-1" aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h1 class="modal-title font chocolate-brown bold" id="exampleModalLabel">Refeições e tipos de receita</h1>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <span class="small-box box-green white bold">Almoço</span>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="padding">Adicionar</button>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="recipe-description font chocolate-brown">
@@ -96,15 +114,12 @@
                         <img class="icon" src="img/icon-ingredients.png">
                         <span class="font chocolate-brown bold big">Ingredientes</span>
                     </div>
-                    <div class="font chocolate-brown flex-column gap-20">
-                        <input type="text" placeholder="Ingrediente 1" maxlength="255" required>
-                        <input type="text" placeholder="Ingrediente 2" maxlength="255" required>
-                        <input type="text" placeholder="Ingrediente 3" maxlength="255" required>
-                        <input type="text" placeholder="Ingrediente 4" maxlength="255" required>
+                    <div class="font chocolate-brown flex-column gap-20" id="ingredients">
+                        <input type="text" placeholder="Ingrediente">
                     </div>
                     <div>
                         <img class="icon" src="img/icon-delete.png">
-                        <img class="icon" src="img/plus-icon.png">
+                        <img class="icon" id="add_input_button" src="img/plus-icon.png">
                         <span class="yellow font bold small">Adicionar ingrediente</span>
                     </div>
                 </div>
@@ -113,16 +128,12 @@
                         <img class="icon" src="img/icon-preparation.png">
                         <span class="font chocolate-brown bold big">Modo de Preparo</span>
                     </div>
-                    <div class="font chocolate-brown flex-column gap-20">
-                        <textarea name="" id=""
-                            required>Passo 1 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium magni odio aliquid assumenda iurhtrhrytrye repudiandae dignissimos, sint, vitae obcaecati voluptate corrupti quas soluta, unde eveniet excepturi debitis sed quo rerum?</textarea>
-                        <textarea name="" id="" required>Passo 2</textarea>
-                        <textarea name="" id="" required>Passo 3</textarea>
-                        <textarea name="" id="" required>Passo 4</textarea>
+                    <div class="font chocolate-brown flex-column gap-20" id="steps">
+                        <textarea placeholder="Passo"></textarea>
                     </div>
                     <div>
                         <img class="icon" src="img/icon-delete.png">
-                        <img class="icon" src="img/plus-icon.png">
+                        <img class="icon" id="add_textarea_button" src="img/plus-icon.png">
                         <span class="yellow font bold small">Adicionar modo de preparo</span>
                     </div>
                 </div>
@@ -134,6 +145,8 @@
             </div>
         </form>
     </main>
+    <script src="/js/add_photo.js" defer></script>
+    <script src="/js/add_recipe_information.js" defer></script>
 </body>
 
 </html>
