--- a/src/views/comunity.ejs
+++ b/src/views/comunity.ejs
@@ -21,7 +21,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/header_style.css">
     <link rel="stylesheet" type="text/css" href="css/recipe_style.css">
-    <title>Home</title>
+    <title>Comunidade</title>
 </head>
 
 <body>
