--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -26,7 +26,7 @@
     <link rel="stylesheet" type="text/css" href="css/profile_style.css">
     <link rel="stylesheet" type="text/css" href="css/header_style.css">
 
-    <title>Home page</title>
+    <title>Perfil</title>
 </head>
 
 <body>
