Working on the signup backend

--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -102,7 +102,7 @@
                 <button class="width-100 bg-yellow">Editar</button>
             </div>
             <div class="box third flex-colum space-betweenn gap-10">
-                <div class="width-max height-100 center flex-column">
+                <div class="width-max height-100 center flex-column max-width">
                     <div class="flex-row gap-10 flex-start height-min width-100">
                         <img src="/img/trophy-icon.png" class="trophy">
                         <div class="flex-column height-fit">
