--- a/src/views/signup_3.ejs
+++ b/src/views/signup_3.ejs
@@ -26,14 +26,14 @@
     <div class="bg-img sign">
         <div class="container zero-gap">
             <span class="font superbold big green margin-zero">CONFIRMAR</span>
-            <form>
+            <form action="/signup-3" method="post">
                 <a class="font small bod info " href="">Digite o código de verificação que foi enviado para você por
                     e-mail</a>
                 <div>
                     <input class="width-100" type="text" placeholder="Código" required>
                     <a class="font yellow small bold" href="">Reenviar código</a>
                 </div>
-                <button class="width-100 type=" submit">Cadastrar</button>
+                <button class="width-100" type="submit">Cadastrar</button>
             </form>
         </div>
 
