--- a/src/views/view_recipes.ejs
+++ b/src/views/view_recipes.ejs
@@ -13,16 +13,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/font_style.css">
-    <link rel="stylesheet" type="text/css" href="css/icon_style.css">
-    <link rel="stylesheet" type="text/css" href="css/nav_bar_style.css">
-    <link rel="stylesheet" type="text/css" href="css/home_style.css">
-    <link rel="stylesheet" type="text/css" href="css/view_recipes_style.css">
-    <link rel="stylesheet" type="text/css" href="css/small_box_style.css">
-    <link rel="stylesheet" type="text/css" href="css/display_flex_style.css">
-    <link rel="stylesheet" type="text/css" href="css/sign_style.css">
+    <link rel="stylesheet" type="text/css" href="/css/font_style.css">
+    <link rel="stylesheet" type="text/css" href="/css/icon_style.css">
+    <link rel="stylesheet" type="text/css" href="/css/nav_bar_style.css">
+    <link rel="stylesheet" type="text/css" href="/css/home_style.css">
+    <link rel="stylesheet" type="text/css" href="/css/view_recipes_style.css">
+    <link rel="stylesheet" type="text/css" href="/css/small_box_style.css">
+    <link rel="stylesheet" type="text/css" href="/css/display_flex_style.css">
+    <link rel="stylesheet" type="text/css" href="/css/sign_style.css">
 
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
 
     <title>Receita</title>
 </head>
@@ -32,7 +32,7 @@
         <nav class="header navbar navbar-expand-lg">
             <div class="container-fluid padding-zero">
                 <div class="menu">
-                    <a class="padding-zero margin-zero" href="/home"><img src="img/logo-white-green.png" class="logo-icon"></a>
+                    <a class="padding-zero margin-zero" href="/home/<%= this_user.username %>"><img src="/img/logo-white-green.png" class="logo-icon"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false"
                         aria-label="Toggle navigation">
