--- a/src/views/comunity.ejs
+++ b/src/views/comunity.ejs
@@ -13,14 +13,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/font_style.css">
-    <link rel="stylesheet" type="text/css" href="css/icon_style.css">
-    <link rel="stylesheet" type="text/css" href="css/nav_bar_style.css">
-    <link rel="stylesheet" type="text/css" href="css/home_style.css">
-    <link rel="stylesheet" type="text/css" href="css/sign_style.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="stylesheet" type="text/css" href="css/header_style.css">
-    <link rel="stylesheet" type="text/css" href="css/recipe_style.css">
+    <link rel="stylesheet" type="text/css" href="/css/font_style.css">
+    <link rel="stylesheet" type="text/css" href="/css/icon_style.css">
+    <link rel="stylesheet" type="text/css" href="/css/nav_bar_style.css">
+    <link rel="stylesheet" type="text/css" href="/css/home_style.css">
+    <link rel="stylesheet" type="text/css" href="/css/sign_style.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link rel="stylesheet" type="text/css" href="/css/header_style.css">
+    <link rel="stylesheet" type="text/css" href="/css/recipe_style.css">
     <title>Comunidade</title>
 </head>
 
@@ -29,7 +29,7 @@
         <nav class="header navbar navbar-expand-lg">
             <div class="container-fluid padding-zero">
                 <div class="menu">
-                    <a class="padding-zero margin-zero" href="/home"><img src="img/logo-white-green.png"
+                    <a class="padding-zero margin-zero" href="/home/<%= this_user.username %>"><img src="/img/logo-white-green.png"
                             class="logo-icon"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false"
