--- a/src/views/signup_2.ejs
+++ b/src/views/signup_2.ejs
@@ -13,11 +13,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/font_style.css">
-    <link rel="stylesheet" type="text/css" href="css/sign_style.css">
-    <link rel="stylesheet" type="text/css" href="css/home_style.css">
+    <link rel="stylesheet" type="text/css" href="/css/font_style.css">
+    <link rel="stylesheet" type="text/css" href="/css/sign_style.css">
+    <link rel="stylesheet" type="text/css" href="/css/home_style.css">
 
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
     <title>Cadastrar</title>
 </head>
 
